--- a/QLXM/src/poly/edu/vn/display/NhanVienFrame.form
+++ b/QLXM/src/poly/edu/vn/display/NhanVienFrame.form
@@ -79,7 +79,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="tabs" pref="475" max="32767" attributes="0"/>
+                  <Component id="tabs" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
